--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 COPY ./requirements.txt .
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
+RUN pip install uv
+
+ENV PATH="/root/.local/bin:${PATH}"
 
 COPY . .
 
