--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /app
 COPY ./requirements.txt .
 
 RUN pip install -r requirements.txt --upgrade
+RUN pip install uv
+
+ENV PATH="/root/.local/bin:${PATH}"
 
 COPY . .
 
