--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,7 +16,7 @@ services:
       context: ./backend/
       dockerfile: Dockerfile
     # command: fastapi run main.py --host 0.0.0.0 --port 8080
-    command: /app/.venv/bin/fastapi run main.py --host 0.0.0.0 --port 8080
+    command: uv run fastapi run main.py --host 0.0.0.0 --port 8080
     restart: unless-stopped
     develop:
       watch:
@@ -34,6 +34,9 @@ services:
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       MONGO_USERNAME: ${MONGO_USERNAME}
       MONGO_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_APP_USERNAME: ${MONGO_USERNAME}
+      MONGO_APP_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_AUTH_SOURCE: ${MONGO_AUTH_SOURCE:-admin}
     depends_on:
       # - mongo
       - traefik
