--- a/stage.yaml
+++ b/stage.yaml
@@ -34,8 +34,10 @@ services:
       MONGO_USERNAME: ${MONGO_USERNAME}
       MONGO_PASSWORD: ${MONGO_PASSWORD}
     depends_on:
-      # - mongo
-      - traefik
+      traefik:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
     # ports:
     #   - "8080:8080"
     networks:
@@ -47,6 +49,12 @@ services:
       - traefik.http.routers.fastapi.tls=true
       - traefik.http.routers.fastapi.tls.certresolver=production
       - traefik.http.services.backend.loadbalancer.server.port=8080
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://fastapi:8080/token || exit 0"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   streamlit:
     build:
@@ -69,7 +77,8 @@ services:
           ignore:
             - __pycache__/
     depends_on:
-      - fastapi
+      fastapi:
+        condition: service_healthy
     # ports:
     #   - "8501:8501"
     networks:
