--- a/compose/mongo.yaml
+++ b/compose/mongo.yaml
@@ -2,9 +2,9 @@ services:
   mongo:
     image: mongo
     restart: unless-stopped
-    entrypoint:
-      - /usr/bin/mongod
-      - --bind_ip_all
+    # entrypoint:
+    #   - /usr/bin/mongod
+    #   - --bind_ip_all
     # ports:
     #   - "27017:27017"
     networks:
@@ -15,6 +15,12 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
+    healthcheck:
+      test: ["CMD-SHELL", "mongosh --quiet --eval \"db.adminCommand({ ping: 1 }).ok\" | grep -q 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   # mongo-express: # view from web
   #   image: mongo-express
