--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 
 ### Experiential credit ###
 experiential_credit.zip
+sprint3_doc_recording_small.mp4
+ai_tutor_recording.mp4
 
 ### MONGO ###
 mongo/snapshots/*
