--- a/compose/traefik.yaml
+++ b/compose/traefik.yaml
@@ -1,6 +1,6 @@
 services:
   traefik:
-    image: traefik:latest
+    image: traefik:3
     # container_name: traefik
     restart: unless-stopped
     # env_file:
