--- a/plausible/compose.yaml
+++ b/plausible/compose.yaml
@@ -99,7 +99,7 @@ services:
       - traefik.enable=true
       # - traefik.http.routers.plausible.entrypoints=web
       - traefik.http.routers.plausible.entrypoints=websecure
-      - traefik.http.routers.plausible.rule=Host(`analytics.${STG_DOMAIN}`)
+      - traefik.http.routers.plausible.rule=Host(`analytics.${DOMAIN}`)
       - traefik.http.routers.plausible.tls=true
       - traefik.http.routers.plausible.tls.certresolver=production
 
