final documents I had yet to commit

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 experiential_credit.zip
 sprint3_doc_recording_small.mp4
 ai_tutor_recording.mp4
+tests_final_presentation.mov
+tests_final_presentation_converted.mov
+final_presentation.mp4
+sprint4_final_presentation.mp4
+diagrams_aitutor_final_presentation.mp4
+
 
 ### MONGO ###
 mongo/snapshots/*
